--- a/library_share/src/main/res/values-night/colors.xml
+++ b/library_share/src/main/res/values-night/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
       <color name="share_tv_title_text_color">#D3D3D3</color>
+      <color name="share_rl_qrcode_background">#303030</color>
 
 </resources>
