--- a/library_share/src/main/res/values/dimens.xml
+++ b/library_share/src/main/res/values/dimens.xml
@@ -1,8 +1,25 @@
 <resources>
-    <dimen name="share_rl_head">80dp</dimen>
-    <dimen name="share_rl_head_margin_start">10dp</dimen>
-    <dimen name="share_rl_head_margin_end">10dp</dimen>
-    <dimen name="share_rl_head_margin_top">10dp</dimen>
+    <dimen name="share_rl_share_padding_start">10dp</dimen>
+    <dimen name="share_rl_share_padding_end">10dp</dimen>
+    <dimen name="share_rl_share_padding_bottom">10dp</dimen>
+    <dimen name="share_rl_share_padding_top">15dp</dimen>
+
+    <dimen name="share_iv_photo_height">300dp</dimen>
+    <dimen name="share_iv_photo_margin_top">10dp</dimen>
     <dimen name="share_iv_code_width">50dp</dimen>
     <dimen name="share_iv_code_height">50dp</dimen>
+    <dimen name="share_rl_code_margin_top">10dp</dimen>
+    <dimen name="share_rl_code_padding_top">10dp</dimen>
+    <dimen name="share_rl_code_padding_bottom">10dp</dimen>
+    <dimen name="share_view_line_margin_top">10dp</dimen>
+    <dimen name="share_rl_code_padding_right">10dp</dimen>
+    <dimen name="share_tv_code_desc_margin_right">10dp</dimen>
+    <dimen name="share_ll_channer_margin_top">20dp</dimen>
+    <dimen name="share_ll_channer_margin_bottom">10dp</dimen>
+    <dimen name="share_tv_channer_wechat_text_size">12sp</dimen>
+    <dimen name="share_tv_channer_wechat_circle_text_size">12sp</dimen>
+    <dimen name="share_tv_save_local_text_size">12sp</dimen>
+    <dimen name="share_tv_title_text_size">16sp</dimen>
+    <dimen name="share_tv_desc_margin_top">10dp</dimen>
+
 </resources>
