--- a/library_widget/src/main/res/values/styles.xml
+++ b/library_widget/src/main/res/values/styles.xml
@@ -76,4 +76,35 @@
         <item name="android:windowExitAnimation">@anim/widget_dialog_exit</item>
     </style>
 
+    <style name="ShapeCheckBoxStyle" parent="Widget.AppCompat.CompoundButton.CheckBox">
+        <item name="shape_buttonDrawable">@drawable/widget_shape_view_placeholder</item>
+    </style>
+
+    <style name="ShapeRadioButtonStyle" parent="Widget.AppCompat.CompoundButton.RadioButton">
+        <item name="shape_buttonDrawable">@drawable/widget_shape_view_placeholder</item>
+    </style>
+
+    <declare-styleable name="Fp_ShadowLayout">
+        <attr name="fp_shadowColor" format="color"/>
+        <attr name="fp_shadowRadius" format="dimension"/>
+        <attr name="fp_shadowRoundRadius" format="dimension"/>
+        <attr name="fp_shadowShape">
+            <flag name="fp_rectangle" value="0x0001"/>
+            <flag name="fp_round_rectangle" value="0x0100"/>
+        </attr>
+        <attr name="fp_shadowSide">
+            <flag name="fp_all" value="0x1111"/>
+            <flag name="fp_left" value="0x0001"/>
+            <flag name="fp_top" value="0x0010"/>
+            <flag name="fp_right" value="0x0100"/>
+            <flag name="fp_bottom" value="0x1000"/>
+        </attr>
+        <attr name="fp_round_corner">
+            <flag name="fp_corner_all" value="0x1111"/>
+            <flag name="fp_corner_leftTop" value="0x0001"/>
+            <flag name="fp_corner_leftBottom" value="0x0010"/>
+            <flag name="fp_corner_rightTop" value="0x0100"/>
+            <flag name="fp_corner_rightBottom" value="0x1000"/>
+        </attr>
+    </declare-styleable>
 </resources>
