--- a/module_home/src/main/res/layouts/items/layout/home_toparticle_foot.xml
+++ b/module_home/src/main/res/layouts/items/layout/home_toparticle_foot.xml
@@ -1,9 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/home_top_article_rv">
+
+
+    <com.knight.kotlin.library_widget.shadeview.FpShadowLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:fp_shadowColor="#20000000"
+        app:fp_shadowRadius="8dp"
+        app:fp_shadowShape="fp_rectangle"
+        app:fp_shadowSide="fp_top">
+
+
 
     <LinearLayout
         android:id="@+id/home_ll_seemorearticles"
@@ -11,7 +23,8 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_centerHorizontal="true"
-        android:gravity="center">
+        android:gravity="center"
+        >
 
 
 
@@ -20,7 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="@dimen/home_tv_seemorearticles_height"
             android:textSize="@dimen/home_tv_seemorearticles_text_size"
-            android:text="@string/home_toparticle_foot"
+            android:text="@string/home_toparticle_expand_foot"
             android:gravity="center_vertical"
             />
 
@@ -29,9 +42,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/home_iv_toparticlearrow_margin_left"
+            android:elevation="18dp"
             android:background="@drawable/home_icon_expand_arrowdown"/>
 
 
-    </LinearLayout>
 
+
+    </LinearLayout>
+    </com.knight.kotlin.library_widget.shadeview.FpShadowLayout>
 </RelativeLayout>
