--- a/module_home/src/main/res/layouts/fragments/layout/home_recommend_fragment.xml
+++ b/module_home/src/main/res/layouts/fragments/layout/home_recommend_fragment.xml
@@ -16,10 +16,11 @@
         <RelativeLayout
             android:id="@+id/rl_home"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             app:layout_constraintTop_toBottomOf="@id/home_include_toolbar"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent">
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent">
 
 
 
