--- a/module_home/src/main/res/values-night/colors.xml
+++ b/module_home/src/main/res/values-night/colors.xml
@@ -4,6 +4,10 @@
     <color name="home_login_tv_color">#D3D3D3</color>
     <color name="home_bar_search">#333333</color>
     <color name="home_bar_hint">#999999</color>
+    <color name="home_recommend_home_bg">#000000</color>
+    <color name="home_tv_hot_value_text_color">#000000</color>
+    <color name="home_real_time_title_text_color">#FFB673</color>
+    <color name="home_rl_real_time_title_background">#303030</color>
     <color name="home_everypush_bottom_message">#303030</color>
     <color name="home_push_article_title">#D3D3D3</color>
     <color name="home_push_article_desc">#666666</color>
@@ -11,6 +15,7 @@
     <color name="home_top_article_title">#D3D3D3</color>
     <color name="home_rl_message">#303030</color>
     <color name="home_tv_unread_message">#D3D3D3</color>
+    <color name="home_tv_commend_background">#303030</color>
     <color name="home_top_article_rv">#303030</color>
     <color name="home_rv_official_account">#303030</color>
     <color name="home_rv_official_bottom_view">#000000</color>
