--- a/module_home/src/main/res/values/dimens.xml
+++ b/module_home/src/main/res/values/dimens.xml
@@ -30,11 +30,14 @@
      <dimen name="home_top_article_author_text_size">14sp</dimen>
      <dimen name="home_rl_message_height">40dp</dimen>
      <dimen name="home_iv_message_margin_left">10dp</dimen>
+     <dimen name="home_tv_realtime_title_margin_left">10dp</dimen>
+     <dimen name="home_tv_realtime_title_text_size">16sp</dimen>
+     <dimen name="home_rl_realtime_title_margin_top">10dp</dimen>
      <dimen name="home_red_round_margin_top">6dp</dimen>
+     <dimen name="home_tv_real_time_more_text_size">14sp</dimen>
      <dimen name="home_tv_unread_message_margin_left">10dp</dimen>
      <dimen name="home_tv_unread_message_text_size">16sp</dimen>
      <dimen name="home_banner_height">160dp</dimen>
-     <dimen name="home_banner_margin_top">10dp</dimen>
      <dimen name="home_rv_bottom_line_height">8dp</dimen>
      <dimen name="home_tv_seemorearticles_height">40dp</dimen>
      <dimen name="home_tv_seemorearticles_text_size">12sp</dimen>
