增加热搜页面

--- a/module_home/src/main/res/layouts/adapters/layout/home_baidu_realtime_item.xml
+++ b/module_home/src/main/res/layouts/adapters/layout/home_baidu_realtime_item.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="viewModel"
-            type="com.knight.kotlin.module_home.entity.HomeBaiduContent" />
+            type="com.knight.kotlin.library_base.entity.BaiduContent" />
 
 
     </data>
