提升Material库版本 增加开眼发现搜索交互

--- a/module_eye_discover/src/main/res/values/styles.xml
+++ b/module_eye_discover/src/main/res/values/styles.xml
@@ -3,4 +3,9 @@
     <style name="eye_discover_expandedTitleTextAppearance">
         <item name="android:textColor">@android:color/white</item>
     </style>
+
+
+    <style name="eye_discover_CustomSearchBar" parent="Theme.Material3.Light.NoActionBar">
+        <item name="android:background">#FF7729</item> <!-- 背景颜色 -->
+    </style>
 </resources>
