--- a/library_base/src/main/res/values-v28/styles.xml
+++ b/library_base/src/main/res/values-v28/styles.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <style name="base_AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
+    <style name="base_AppTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@android:color/white</item>
         <item name="colorPrimaryDark">@android:color/white</item>
