--- a/module_eye_discover/src/main/res/layouts/adapters/layout/eye_discover_recommend_search_hot_item.xml
+++ b/module_eye_discover/src/main/res/layouts/adapters/layout/eye_discover_recommend_search_hot_item.xml
@@ -51,6 +51,20 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/ll_search_recommend_title" />
 
+        <TextView
+            android:id="@+id/tv_video_week_rank"
+            style="@style/TextAppearance.Material3.TitleMedium"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:includeFontPadding="false"
+            android:text="视频周榜"
+            android:paddingHorizontal="16dp"
+            android:paddingVertical="8dp"
+            app:layout_constraintTop_toBottomOf="@id/chipGroup"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:drawableRight="@drawable/eye_discover_right_arrow"/>
+
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
