--- a/module_eye_discover/src/main/res/values/dimens.xml
+++ b/module_eye_discover/src/main/res/values/dimens.xml
@@ -80,4 +80,9 @@
     <dimen name="eye_discover_search_video_tv_title_margin_left">10dp</dimen>
     <dimen name="eye_discover_search_video_tv_title_text_size">16sp</dimen>
     <dimen name="eye_discover_search_result_indicator_height">40dp</dimen>
+    <dimen name="eye_discover_search_result_author_width">75dp</dimen>
+    <dimen name="eye_discover_search_result_author_height">75dp</dimen>
+    <dimen name="eye_discover_search_result_author_margin_start">10dp</dimen>
+    <dimen name="eye_discover_tv_search_author_desc_margin_top">4dp</dimen>
+    <dimen name="eye_discover_tv_search_author_desc_margin_end">15dp</dimen>
 </resources>
