--- a/module_eye_discover/src/main/res/values/styles.xml
+++ b/module_eye_discover/src/main/res/values/styles.xml
@@ -10,4 +10,11 @@
     </style>
 
 
+
+    <!-- 定义一个自定义的 ShapeAppearance -->
+    <style name="eye_discover_CustomSearchAuthor" parent="Widget.MaterialComponents.ShapeableImageView">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSizeTopLeft">16dp</item>
+        <item name="cornerSizeTopRight">16dp</item>
+    </style>
 </resources>
